Master push fix

--- a/paulFolder/web/firstTry.html
+++ b/paulFolder/web/firstTry.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Simulating data</title>
+  <title>First Try</title>
   <!-- <link href="firstTry.css" rel="stylesheet"> -->
 </head>
 
@@ -11,10 +11,9 @@
   <p>Blue</p><p id='BlueTiles'></p>
   <p>Neutral</p><p id='NeutralTiles'></p>
   <p>Red</p><p id='RedTiles'></p>
-  <p>Temp</p><p id='temp1'></p>
-  <script src="firstTry.js"></script>
-  <script src="givmeData.js"></script>
 
+  <script src="givmeData.js"></script>
+  <script src="firstTry.js"></script>
 </body>
 
 
